--- a/data/equipment/consumable-03-hoX2sJiYtJrSp6BH.htm
+++ b/data/equipment/consumable-03-hoX2sJiYtJrSp6BH.htm
@@ -1,6 +1,6 @@
 Name: Psychic Warding Bracelet
-Nom: 
-État: auto-trad
+Nom: Bracelet de sauvegarde psychique
+État: libre
 
 ------ Description (en) ------
 <p>This set of reflective metal wires takes 10 minutes to properly tie along the wrist's energy meridians, then repels attempts at mental manipulation. You gain a +2 item bonus to your next save against a mental effect after tying on the bracelet. After this save, the metal strands tarnish and fall off (possibly alerting the wearer or others that their mind has been tampered with).</p>
@@ -11,10 +11,10 @@ Nom:
 <li>+2 item bonus to your next save against a mental effect </li>
 </ul>
 ------ Description (fr) ------
-<p>Cet ensemble de fils métalliques réfléchissants prend 10 minutes pour être correctement attaché le long des méridiens énergétiques du poignet, puis repousse les tentatives de manipulation mentale. Vous gagnez un bonus d'objet de +2 à votre prochaine sauvegarde contre un effet mental après avoir attaché le bracelet. Après cette sauvegarde, les brins de métal ternissent et tombent (ce qui peut alerter le porteur ou d'autres personnes que leur esprit a été manipulé).</p>
-<p>Vous pouvez retirer le bracelet avec une action d'Interact, mais cela brise l'alignement du bracelet'et vous devez passer 10 minutes de plus pour le remettre soigneusement en place.</p>
+<p>Cet ensemble de fils métalliques réfléchissants prend 10 minutes pour être correctement attaché le long des méridiens énergétiques du poignet, pour ensuite repousser les tentatives de manipulation mentale. Portant ce bracelet vous gagnez un bonus d'objet de +2 à votre prochain jet de sauvegarde contre un effet mental. Après cette sauvegarde, les brins de métal ternissent et tombent (ce qui peut alerter le porteur ou d'autres personnes que leur esprit a été manipulé).</p>
+<p>Vous pouvez retirer le bracelet avec une action d'Interagir, mais cela brise l'alignement du bracelet et vous devez passer 10 minutes de plus pour le remettre soigneusement en place.</p>
 <hr />
 <p>Effets appliqués automatiquement:</p>
 <ul>
-<li>Bonus d'objet de +2 à votre prochaine sauvegarde contre un effet mental </li>
+<li>Bonus d'objet de +2 à votre jet de sauvegarde contre un effet mental </li>
 </ul>
