--- a/data/equipment/consumable-13-dyvwp4EHgJDzVjJh.htm
+++ b/data/equipment/consumable-13-dyvwp4EHgJDzVjJh.htm
@@ -1,5 +1,5 @@
 Name: Metalmist Sphere (Greater)
-Nom: Sphère de Brume-métal
+Nom: Sphère de Brume-métal (supérieur)
 État: libre
 
 ------ Description (en) ------
@@ -9,10 +9,8 @@ Nom: Sphère de Brume-métal
 <hr />
 <p>The radius of the burst is 15 feet.</p>
 ------ Description (fr) ------
-<p><strong>Activate</strong> <span style="font-family : 'Pathfinder2eActions' ; font-size : 1.8em ; display : inline;">A</span> Interact</p>
-<hr />
-<p><strong>Activation</strong> <span class="pf2-icon">A</span> Interagir</p>
+<<p><strong>Activation</strong> <span class="pf2-icon">A</span> Interagir</p>
 <hr />
 <p>Cette sphère contient de petits fragments de pierres de tonnerre au sein d'une suspension colloïdale d'un métal précieux. Lorsque vous faites tourner la sphère, elle crée une brume opaque en rafale centrée sur un coin de votre espace. Les créatures situées dans cette zone sont dissimulées, et toutes les autres créatures leur sont dissimulées. Toute créature ayant une faiblesse au métal précieux qui commence son tour dans la brume subit des dégâts égaux à sa faiblesse. La brume dure 1 minute ou jusqu'à ce qu'elle soit dispersée par un vent fort. La plupart des sphères de Brume-métal sont remplies d'argent ou de fer froid, mais des versions plus coûteuses contenant d'autres ingrédients peuvent exister.</p>
 <hr />
-<p>Le rayon de l'éclatement est de 4,50 mètres. </p>
+<p>Le rayon de l'éclatement est de 4,5 mètres. </p>
