--- a/data/equipment/consumable-05-E7BcwZy8nTpTLYf1.htm
+++ b/data/equipment/consumable-05-E7BcwZy8nTpTLYf1.htm
@@ -11,6 +11,6 @@ Nom: Bombe de Poivre aveuglant
 ------ Description (fr) ------
 <p><strong>Activate</strong> <span class="pf2-icon">1</span> Attaque</p>
 <p>Bien que coûteuses, ces bombes alchimiques à usage unique sont souvent utilisées par les forces de police pour disperser les foules indisciplinées et réprimer les émeutes sans risquer de causer des blessures physiques permanentes aux agents ou aux civils.
-<p>La bombe peut être lancée jusqu'à 9 mètres, ce qui la fait exploser et pulvériser la poussière de poivre en aérosol dans un rayon de 4,5 mètres. Toutes les créatures situées dans la zone doivent réussir un test de réflexe DD 18 pour éviter d'inhaler la poussière ou d'en recevoir dans les yeux.
+<p>La bombe peut être lancée jusqu'à 9 mètres, ce qui la fait exploser et pulvériser la poussière de poivre en aérosol dans un rayon de 4,5 mètres. Toutes les créatures situées dans la zone doivent réussir un jet de réflexe DD 18 pour éviter d'inhaler la poussière ou d'en recevoir dans les yeux.
 <p>En cas d'échec, la créature est @Compendium[pf2e.conditionitems.XgEqL1kFApUbl5Z2]{Aveuglée} pendant 1 round et ensuite @Compendium[pf2e.conditionitems.TkIyaNPgTZFBCCuh]{Éblouie} pendant 1 round.</p> 
 <p>Sur un échec critique, la créature est aveuglée pendant 1 round, @Compendium[pf2e.conditionitems.fesd1n5eVhpCSS18]{Malade} 1, et Éblouie jusqu'à ce qu'elle supprime la condition de malaise.</p>
