--- a/data/equipment/consumable-05-uwVTuejjSLl82jiA.htm
+++ b/data/equipment/consumable-05-uwVTuejjSLl82jiA.htm
@@ -1,6 +1,6 @@
 Name: Ichthyosis Mutagen
-Nom: 
-État: auto-trad
+Nom: Mutagène de Peau squameuse
+État: libre
 
 ------ Description (en) ------
 <p><strong>Activate</strong> <span class="pf2-icon">1</span> Interact</p>
@@ -9,8 +9,8 @@ Nom:
 <p><strong>Benefit</strong> For 1 minute, you gain fast healing 2 and automatically succeed at flat checks to recover from persistent bleed damage.</p>
 <p><strong>Drawback</strong> Your thickened skin makes quick movement difficult, and your excess skin flakes off with the slightest movement. You take a –2 penalty to Reflex saves for 1 minute. Any creature attempting to @Compendium[pf2e.actionspf2e.EA5vuSgJfiHH7plD]{Track} you in the next 24 hours gains a +4 circumstance bonus to their check.</p>
 ------ Description (fr) ------
-<p><strong>Activate</strong> <span class="pf2-icon">1</span> Interact</p>
+<p><strong>Activation</strong> <span class="pf2-icon">1</span> Interagir</p>
 <p>Après avoir bu ce mutagène, votre peau se renouvelle continuellement, s'épaississant en larges plaques squameuses.</p>
 <hr />
-<p><strong>Avantage</strong> Pendant 1 minute, vous gagnez une guérison rapide de 2 et réussissez automatiquement les tests de plat pour récupérer des dégâts de saignement persistant.</p>
-<p><strong>Drawback</strong> Votre peau épaissie rend les mouvements rapides difficiles, et votre excédent de peau se détache au moindre mouvement. Vous subissez un malus de -2 aux sauvegardes de Réflexes pendant 1 minute. Toute créature qui tente de vous @Compendium[pf2e.actionspf2e.EA5vuSgJfiHH7plD]{pister} dans les 24 prochaines heures bénéficie d'un bonus de circonstances de +4 à son test.</p>
+<p><strong>Avantage</strong> Pendant 1 minute, vous gagnez une guérison rapide de 2 et réussissez automatiquement les tests nus pour récupérer des dégâts de saignement persistant.</p>
+<p><strong>Inconvénient</strong> Votre peau épaissie rend les mouvements rapides difficiles, et votre excédent de peau se détache au moindre mouvement. Vous subissez un malus de -2 aux sauvegardes de Réflexes pendant 1 minute. Toute créature qui tente de vous @Compendium[pf2e.actionspf2e.EA5vuSgJfiHH7plD]{Pister} dans les 24 prochaines heures, bénéficie d'un bonus de circonstances de +4 à son test.</p>
