--- a/data/equipment/consumable-07-FgAPV0iLE6R1QMJ5.htm
+++ b/data/equipment/consumable-07-FgAPV0iLE6R1QMJ5.htm
@@ -1,7 +1,6 @@
 Name: Skinstitch Salve
-Nom: 
-État: changé
-État d'origine: auto-trad
+Nom: Pommade Sutures
+État: libre
 
 ------ Description (en) ------
 <p>This sticky salve stubbornly holds wounds closed and encourages swift natural healing. You can activate the salve in either of the following ways.</p>
@@ -14,12 +13,12 @@ Nom:
 <hr />
 <p>@Compendium[pf2e.consumable-effects.zlSNbMDIlTOpcO8R]{Effect: Skinstitch Salve}</p>
 ------ Description (fr) ------
-Cette pommade collante maintient obstinément les plaies fermées et favorise une guérison naturelle rapide. Vous pouvez activer la pommade de l'une des façons suivantes : </p>
-<p><strong>Activate</strong> <span style="font-family : 'Pathfinder2eActions' ; font-size : 1.8em ; display : inline;">1</span> Interact</p>
-<p><strong>Effet</strong> Vous @Compendium[pf2e.actionspf2e.MHLuKy4nQO2Z4Am1]{Administrer les premiers soins} sans avoir besoin du @Compendium[pf2e.equipment-srd.s1vB3HdXjMigYAnY]{Healer's Tools}. Vous gagnez un bonus d'objet de +2 au test de médecine, ou vous pouvez utiliser le modificateur de médecine du salve de points de suture de [[/r 1d20+13]] au lieu du vôtre.</p>
+Cette pommade collante maintient obstinément les plaies fermées et favorise une guérison naturelle rapide. Vous pouvez activer la pommade suture de l'une des façons suivantes : </p>
+<p><strong>Activation</strong> <span class="pf2-icon">F</span> Interagir</p>
+<p><strong>Effet</strong> Vous @Compendium[pf2e.actionspf2e.MHLuKy4nQO2Z4Am1]{Soigner les blessures} sans avoir besoin du @Compendium[pf2e.equipment-srd.s1vB3HdXjMigYAnY]{Outils de guérisseur}. Vous gagnez soit un bonus d'objet de +2 au test de médecine, soit vous utilisez le modificateur au jet de médecine proposé par la pommade suture, [[/r 1d20+13]], au lieu du vôtre.</p>
 <hr />
-<p><strong>Activate</strong> <span style="font-family : 'Pathfinder2eActions' ; font-size : 1.8em ; display : inline;">F</span> Interact</p>
-<p><strong>Déclencheur</strong> Vous @Compendium[pf2e.actionspf2e.1kGNdIIhuglAjIp9]{Traitement des blessures} ou utilisez @Compendium[pf2e.feats-srd.wYerMk6F1RZb0Fwt]{Médecine de combat};</p>
-<p><strong>Effet</strong> Vous gagnez un bonus d'objet de +2 au test de médecine déclencheur. Si vous obtenez un succès au test de médecine, vous obtenez un succès critique à la place.</p>
+<p><strong>Activation</strong> <span class="pf2-icon">F</span> Interagir</p>
+<p><strong>Déclencheur</strong> Vous @Compendium[pf2e.actionspf2e.1kGNdIIhuglAjIp9]{Prodiguez les premiers soins} ou utilisez @Compendium[pf2e.feats-srd.wYerMk6F1RZb0Fwt]{Médecine de combat};</p>
+<p><strong>Effet</strong> Vous gagnez un bonus d'objet de +2 au test de Médecine. Si vous obtenez un succès au test de médecine, vous obtenez un succès critique à la place.</p>
 <hr />
-<p>@Compendium[pf2e.consumable-effects.zlSNbMDIlTOpcO8R]{Effet : Pommade pour Points de Peau}</p>
+<p>@Compendium[pf2e.consumable-effects.zlSNbMDIlTOpcO8R]{Effet: Pommade suture}</p>
