--- a/data/equipment/consumable-07-kzfRjSrq4JNZlc32.htm
+++ b/data/equipment/consumable-07-kzfRjSrq4JNZlc32.htm
@@ -1,7 +1,6 @@
 Name: Whisper Briolette
-Nom: 
-État: changé
-État d'origine: auto-trad
+Nom: Briolette de Chuchotement
+État: libre
 
 ------ Description (en) ------
 <p><strong>Activate</strong> <span class="pf2-icon">2</span> Envision;</p>
@@ -9,7 +8,7 @@ Nom:
 <hr />
 <p>This teardrop-shaped gemstone has triangular facets and looks suitable for fancy attire, although close inspection shows that it's hollow. When it's activated, you can instantly impart up to 1 minute of speech (roughly 150 words) telepathically to any creatures you choose within 100 feet. You can impart this instantaneous telepathic message to creatures that you perceive and creatures @Compendium[pf2e.conditionitems.iU0fEDdBp3rXpTMC]{Hidden} to you, but you can't do so to @Compendium[pf2e.conditionitems.VRSef5y1LmL2Hkjf]{Undetected} creatures. Once used, the whisper briolette becomes unusable and subtly vanishes within the next few minutes, rather than crumbling to dust.</p>
 ------ Description (fr) ------
-<p><strong>Activer</strong> <span style="font-family : 'Pathfinder2eActions' ; font-size : 1.8em ; display : inline;">2</span> Envision;</p>
-<p><strong>Requirements</strong> Vous êtes un expert en Stealth</p>
+<p><strong>Activation</strong> <span class="pf2-icon">2</span> Imaginer</p>
+<p><strong>Prérequis</strong> Vous êtes un expert en Discrétion</p>
 <hr />
-<p>Cette pierre précieuse en forme de goutte d’eau possède des facettes triangulaires et semble convenir aux tenues de fantaisie, bien qu’un examen attentif montre qu’elle est creuse. Lorsqu’elle est activée, vous pouvez instantanément transmettre jusqu’à 1 minute de parole (environ 150 mots) par télépathie à toutes les créatures de votre choix situées dans un rayon de 30 mètres. Vous pouvez transmettre ce message télépathique instantané aux créatures que vous percevez et aux créatures @Compendium[pf2e.conditionitems.iU0fEDdBp3rXpTMC]{Cachées} à vous, mais vous ne pouvez pas le faire aux créatures @Compendium[pf2e.conditionitems.VRSef5y1LmL2Hkjf]{Détectées}. Une fois utilisée, la briolette de chuchotement devient inutilisable et disparaît subtilement dans les minutes qui suivent, au lieu de tomber en poussière.</p>
+<p>Cette pierre précieuse en forme de goutte d’eau possède des facettes triangulaires et semble convenir aux tenues de fantaisie, bien qu’un examen attentif montre qu’elle est creuse. Lorsqu’elle est activée, vous pouvez instantanément transmettre jusqu’à 1 minute de parole (environ 150 mots) par télépathie à toutes les créatures de votre choix situées dans un rayon de 30 mètres. Vous pouvez transmettre ce message télépathique instantané aux créatures que vous percevez et aux créatures @Compendium[pf2e.conditionitems.iU0fEDdBp3rXpTMC]{Cachées} à vous, mais vous ne pouvez pas le faire aux créatures @Compendium[pf2e.conditionitems.VRSef5y1LmL2Hkjf]{Non détectées}. Une fois utilisée, la Briolette de chuchotement devient inutilisable et disparaît subtilement dans les minutes qui suivent, au lieu de tomber en poussière.</p>
