--- a/data/classfeatures/fighter-01-hmShTfPOcTaKgbf4.htm
+++ b/data/classfeatures/fighter-01-hmShTfPOcTaKgbf4.htm
@@ -1,9 +1,8 @@
 Name: Attack of Opportunity
 Nom: Attaque d’opportunité
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>Ever watchful for weaknesses, you can quickly attack foes that leave an opening in their defenses. You gain the @Compendium[pf2e.feats-srd.O2MwufzEHbuThoGr]{Attack of Opportunity (Fighter)} reaction.</p>
 ------ Description (fr) ------
-<p><span id="ctl00_MainContent_DetailedOutput">Toujours à l’affût de la moindre faiblesse, vous attaquez aussitôt qu’une faille s’ouvre dans la défense de vos ennemis. Vous obtenez la réaction @Compendium[pf2e.feats-srd.O2MwufzEHbuThoGr]{Attaque d’opportunité}.</span></p>
+<p>Toujours à l’affût de la moindre faiblesse, vous attaquez aussitôt qu’une faille s’ouvre dans la défense de vos ennemis. Vous obtenez la réaction @Compendium[pf2e.feats-srd.O2MwufzEHbuThoGr]{Attaque d’opportunité}.</p>
