--- a/data/classfeatures/fighter-11-bAaI7h937Nr3g93U.htm
+++ b/data/classfeatures/fighter-11-bAaI7h937Nr3g93U.htm
@@ -1,9 +1,8 @@
 Name: Fighter Expertise
 Nom: Expertise du Guerrier
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>Your practiced techniques are hard to resist. Your proficiency rank for your fighter class DC increases to expert.</p>
 ------ Description (fr) ------
-<p><span id="ctl00_MainContent_DetailedOutput">Vous avez affûté vos techniques pour qu’il soit plus compliqué d’y résister. Votre rang de maîtrise dans le DD de classe de guerrier passe à expert.&nbsp;</span></p>
+<p>Vous avez affûté vos techniques pour qu’il soit plus compliqué d’y résister. Votre rang de maîtrise dans le DD de classe de guerrier passe à expert.</p>
