--- a/data/equipment/consumable-07-TqX34x9CijryfrlM.htm
+++ b/data/equipment/consumable-07-TqX34x9CijryfrlM.htm
@@ -1,12 +1,13 @@
 Name: Brass Dragon's Breath Potion (Young)
 Nom: Potion de souffle d'un jeune dragon d'airain
-État: auto-trad
+État: libre
 
 ------ Description (en) ------
 <p>This liquid contains blood from a brass dragon. For 1 hour after you imbibe the concoction, you can unleash a brass dragon's breath weapon. The potency of the breath depends on the potion's type, based on the age of the dragon whose blood was used to make the potion.</p>
 <p>Exhaling dragon breath uses a single action. You create a 30-foot line of fire which deals [[/r 4d6]] fire damage. All creatures in the area must attempt a DC 23 basic Reflex save.</p>
 <p>After you use the breath weapon, you can't do so again for [[/r 1d4]] rounds.</p>
 ------ Description (fr) ------
-<p>Ce liquide contient le sang d'un dragon d'airain. Pendant 1 heure après avoir imbibé la concoction, vous pouvez libérer une arme à souffle de dragon cuivré. La puissance du souffle dépend du type de potion's, basé sur l'âge du dragon dont le sang a été utilisé pour faire la potion.</p>
-<p>Expirer un souffle de dragon nécessite une action simple. Vous créez une ligne de feu de 30 pieds qui inflige [[/r 4d6]] dégâts de feu. Toutes les créatures dans la zone doivent tenter une sauvegarde de base en Réflexes DC 23 ;
-<p>Après avoir utilisé l'arme du souffle, vous ne pouvez plus le faire pendant [[/r 1d4]] rounds.</p>
+<p>Ce liquide contient du sang d’un jeune dragon d'arain. Pendant 1 heure après l’avoir bu, vous pouvez souffler comme un tel dragon. Le souffle possède le trait feu. </p>
+<p>Il suffit d’une action unique pour souffler. Le souffle affecte une ligne de 9 mètres de dégâts de feu. Le souffle d'un dragon d'airain inflige [[/r 4d6]] dégâts de feu et chaque créature dans la zone touchée doit faire un jet de réflexes basique DD 23. </p>
+<p> Une fois que vous avez soufflé, vous ne pouvez plus le faire pendant [[/r 1d4]] rounds. </p>
+
