--- a/data/classfeatures/barbarian-01-k7M9jedvt31AJ5ZR.htm
+++ b/data/classfeatures/barbarian-01-k7M9jedvt31AJ5ZR.htm
@@ -1,7 +1,6 @@
 Name: Fury Instinct
 Nom: Instinct de la furie
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>Your rage comes from a deep and purely personal well within you. You use your rage as you choose.</p>
