--- a/data/equipment/consumable-08-bz8Y8bVUe7QfBk9g.htm
+++ b/data/equipment/consumable-08-bz8Y8bVUe7QfBk9g.htm
@@ -1,12 +1,12 @@
 Name: Darkvision Elixir (Greater)
-Nom: 
-État: auto-trad
+Nom: Elixir de vision dans le noir (supérieur)
+État: officielle
 
 ------ Description (en) ------
 <p><strong>Activate</strong><span class="pf2-icon">1</span> Interact</p>
 <p>After you drink this elixir, your sight becomes sharper in darkness. You gain darkvision for 24 hours.</p>
 <p>@Compendium[pf2e.consumable-effects.7vCenP9j6FuHRv5C]{Effect: Darkvision Elixir (Greater)}</p>
 ------ Description (fr) ------
-<p><strong>Activate</strong><span class="pf2-icon">1</span> Interact</p>
-<p>Après avoir bu cet élixir, votre vue devient plus nette dans l'obscurité. Vous gagnez la vision dans le noir pendant 24 heures ;
-<p>@Compendium[pf2e.consumable-effects.7vCenP9j6FuHRv5C]{Effet : Élixir de vision noire (supérieur)}</p>
+<p><strong>Activation</strong><span class="pf2-icon">1</span> Interagir</p>
+<p>Une fois que vous avez bu cet élixir, votre vue devient plus perçante dans les ténèbres. Vous gagnez @Compendium[pf2e.familiar-abilities.0Xrkk46IM43iI1Fv]{Vision dans le noir} pendant 24 heures.</p>
+<p>@Compendium[pf2e.spell-effects.a3hqeAXpmMZgMWuB]{Effet: Élixir de Vision dans le noir (supérieur)}</p>
