--- a/data/equipment/consumable-12-KVrmsNbro6mJ9wuT.htm
+++ b/data/equipment/consumable-12-KVrmsNbro6mJ9wuT.htm
@@ -1,11 +1,10 @@
 Name: Oil of Animation
 Nom: Huile d'animation
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p><strong>Activate</strong> <span class="pf2-icon">A</span> Interact</p>
 <p>You can rub this bronze-colored oil onto a melee weapon to grant it the benefits of the @Compendium[pf2e.equipment-srd.DCPsilr8wbPXxTUv]{Dancing} rune. Once you fail a flat check for the weapon, causing it to fall, this effect ends.</p>
 ------ Description (fr) ------
 <p><span><strong>Activation</strong> <span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;"></span> Interagir</span></p>
-<p><span>YVous pouvez frotter cette huile couleur de bronze sur une arme de corps à corps pour la faire bénéficier des effets d’une rune @Compendium[pf2e.equipment-srd.DCPsilr8wbPXxTUv]{Dansante} L’effet se termine lorsque vous ratez un test nu pour l’arme, ce qui la fait tomber. </span></p>
+<p>Vous pouvez frotter cette huile couleur de bronze sur une arme de corps à corps pour la faire bénéficier des effets d’une rune @Compendium[pf2e.equipment-srd.DCPsilr8wbPXxTUv]{Dansante} L’effet se termine lorsque vous ratez un test nu pour l’arme, ce qui la fait tomber.</p>
