--- a/data/equipment/consumable-16-yPFHTY1GH3rdWwds.htm
+++ b/data/equipment/consumable-16-yPFHTY1GH3rdWwds.htm
@@ -1,5 +1,5 @@
 Name: Dust of Corpse Animation (Greater)
-Nom: 
+Nom: Poussière d'animation de cadavre (supérieur)
 État: changé
 État d'origine: auto-trad
 
