--- a/data/equipment/consumable-10-7TT0XIb8ovLFOP2e.htm
+++ b/data/equipment/consumable-10-7TT0XIb8ovLFOP2e.htm
@@ -1,7 +1,6 @@
 Name: Honeyscent
-Nom: 
-État: changé
-État d'origine: auto-trad
+Nom: Senteur de miel
+État: libre
 
 ------ Description (en) ------
 <p>This sweet-scented poison triggers vivid hallucinations in those who succumb to it, causing most to believe swarms of ravenous biting insects are feeding on them. So vivid are these hallucinations that the victims damage themselves by scratching and clawing at the imaginary swarm. At the GM's discretion, a creature incapable of clawing at itself might instead slam against solid objects, in which case the poison inflicts bludgeoning damage.</p>
@@ -13,11 +12,11 @@ Nom:
 <p><strong>Stage 2</strong> [[/r 2d6#slashing]] slashing damage and @Compendium[pf2e.conditionitems.e1XGnhKNSQIm5IXg]{Stupefied} 1 (1 round)</p>
 <p><strong>Stage 3</strong> [[/r 2d6#slashing]] slashing damage, @Compendium[pf2e.conditionitems.4D2KBtexWXa6oUMR]{Drained} 1, and stupefied 1</p>
 ------ Description (fr) ------
-Ce poison au parfum sucré déclenche des hallucinations très vives chez ceux qui y succombent, la plupart croyant que des essaims d'insectes piqueurs voraces se nourrissent d'eux. Ces hallucinations sont si vives que les victimes s'abîment elles-mêmes en se griffant et en s'accrochant à l'essaim imaginaire. À la discrétion du MJ, une créature incapable de se griffer peut se frapper contre des objets solides, auquel cas le poison inflige des dégâts de matraquage ;
+Ce poison au parfum sucré déclenche des hallucinations très vives chez ceux qui y succombent. La plupart croient que des nuées d'insectes piqueurs et voraces se nourrissent d'eux. Ces hallucinations sont si vives que les victimes s'infligent des dégâts, en se griffant et en essayant de frapper la nuée imaginaire. À la discrétion du MJ, une créature incapable de se griffer peut se cogner contre des objets solides, auquel cas le poison inflige des dégâts contondants.
 <hr />
-<p><strong>Activate</strong> <span style="font-family : 'Pathfinder2eActions' ; font-size : 1.8em ; display : inline;">1</span> Interact (Inhaled)</p>
-<p><strong>Jet de sauvegarde</strong> DC 30 Volonté</p>
+<p><strong>Activation</strong> <span class="pf2-icon">1</span> Interagir (Inhalé)</p>
+<p><strong>Jet de sauvegarde</strong> DD 30 Volonté</p>
 <p><strong>Durée maximale</strong> 6 rounds</p>
-<p><strong>Stade 1</strong> [[/r 2d6#slashing]] dégâts de lame (1 round)</p>
-<p><strong>Stade 2</strong> [[/r 2d6#slashing]] dégâts de slashing et @Compendium[pf2e.conditionitems.e1XGnhKNSQIm5IXg]{Stupefied} 1 (1 round)</p>
-<p><strong>Stade 3</strong> [[/r 2d6#slashing]] dégâts de Slashing, @Compendium[pf2e.conditionitems.4D2KBtexWXa6oUMR]{Drained} 1, et stupefied 1</p>
+<p><strong>Stade 1</strong> [[/r 2d6#slashing]] points de dégâts tranchants (1 round)</p>
+<p><strong>Stade 2</strong> [[/r 2d6#slashing]] points de dégâts tranchant et @Compendium[pf2e.conditionitems.e1XGnhKNSQIm5IXg]{Stupéfié} 1 (1 round)</p>
+<p><strong>Stade 3</strong> [[/r 2d6#slashing]] points de dégâts tranchants, @Compendium[pf2e.conditionitems.4D2KBtexWXa6oUMR]{Drainé} 1, et Stupéfié 1</p>
