--- a/data/equipment/consumable-14-GcllrP56XWEsYQ4j.htm
+++ b/data/equipment/consumable-14-GcllrP56XWEsYQ4j.htm
@@ -1,11 +1,10 @@
 Name: Potion of Sonic Resistance (Greater)
-Nom: Potion de résistance au son (supérieure)
-État: changé
-État d'origine: officielle
+Nom: Potion de résistance au son (supérieur)
+État: officielle
 
 ------ Description (en) ------
 <p>Drinking this thick, fortifying potion grants resistance 15 against sonic damage for 1 hour.</p>
 <p><strong>Activate</strong> <span class="pf2-icon">A</span> Interact</p>
 ------ Description (fr) ------
-<p><span>En buvant cette épaisse potion fortifiante, vous gagnez une résistance 15 contre les dégâts de son pendant 1 heure.</span></p>
-<p><span><strong>Activation</strong>&nbsp;<span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;">A</span>;Interagir</span></p>
+<p>En buvant cette épaisse potion fortifiante, vous gagnez une résistance de 15 contre les dégâts de son pendant 1 heure.</p>
+<p><strong>Activation</strong> <span class="pf2-icon">A</span> Interagir</p>
