--- a/data/equipment/consumable-06-eSHX07MqMT4SM1zY.htm
+++ b/data/equipment/consumable-06-eSHX07MqMT4SM1zY.htm
@@ -1,11 +1,10 @@
 Name: Potion of Sonic Resistance (Lesser)
 Nom: Potion de résistance au son (inférieur)
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>Drinking this thick, fortifying potion grants resistance 5 against sonic damage for 1 hour.</p>
 <p><strong>Activate</strong> <span class="pf2-icon">A</span> Interact</p>
 ------ Description (fr) ------
-<p>En buvant cette épaisse potion fortifiante, vous gagnez une résistance de 5 contre les dégâts de son pendant 1 heure. &nbsp;</p>
-<p><strong>Activate</strong> <span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;">A</span> Interagir</p>
+<p>En buvant cette épaisse potion fortifiante, vous gagnez une résistance de 5 contre les dégâts de son pendant 1 heure.</p>
+<p><strong>Activation</strong> <span class="pf2-icon">A</span> Interagir</p>
