--- a/data/equipment/consumable-10-j9G3tnrKQ1N1dLzN.htm
+++ b/data/equipment/consumable-10-j9G3tnrKQ1N1dLzN.htm
@@ -1,10 +1,10 @@
 Name: Snagging Hook Snare
-Nom: 
-État: auto-trad
+Nom: Piège de crochets métalliques
+État: libre
 
 ------ Description (en) ------
 <p>This snare snags a creature with its wicked metal hooks. The first creature to enter the square takes [[/r 5d8 #piercing]] piercing damage and [[/r 5d8 #slashing]] slashing damage, with a DC 27 basic Reflex save.</p>
 <p>On a critical failure, the hooks piercing its flesh make the creature @Compendium[pf2e.conditionitems.eIcWbB5o3pP6OIMe]{Immobilized} until it successfully @Compendium[pf2e.actionspf2e.SkZAQRkLLkmBQNB9]{Escapes} (DC 27).</p>
 ------ Description (fr) ------
-<p>Ce piège attrape une créature avec ses méchants crochets métalliques. La première créature qui entre dans le carré subit [[/r 5d8 #piercing]] de dégâts perforants et [[/r 5d8 #slashing]] de dégâts tranchants, avec une sauvegarde de base par réflexes DC 27.</p> 
-<p>Sur un échec critique, les crochets perçant sa chair rendent la créature @Compendium[pf2e.conditionitems.eIcWbB5o3pP6OIMe]{Immobilisée} jusqu'à ce qu'elle réussisse @Compendium[pf2e.actionspf2e.SkZAQRkLLkmBQNB9]{Sortir}. (DC 27).</p> 
+<p>Ce piège attrape une créature avec ses méchants crochets métalliques. La première créature qui entre dans la case subit [[/r 5d8 #piercing]] points de dégâts perforants et [[/r 5d8 #slashing]] points de dégâts tranchants, si elle rate son jet de sauvegarde Réflexe DD 27.</p> 
+<p>Sur un échec critique, les crochets perçant sa chair @Compendium[pf2e.conditionitems.eIcWbB5o3pP6OIMe]{Immobilise} la créature jusqu'à ce qu'elle réussisse à @Compendium[pf2e.actionspf2e.SkZAQRkLLkmBQNB9]{S'échapper}. (DD 27).</p> 
