--- a/data/equipment/consumable-10-MHoghQhxbvZRyyaB.htm
+++ b/data/equipment/consumable-10-MHoghQhxbvZRyyaB.htm
@@ -1,11 +1,10 @@
 Name: Potion of Electricity Resistance (Moderate)
-Nom: 
-État: changé
-État d'origine: auto-trad
+Nom: Potion de résistance à l' électricité (modéré)
+État: officielle
 
 ------ Description (en) ------
 <p>Drinking this thick, fortifying potion grants resistance 10 against electrical damage for 1 hour.</p>
 <p><strong>Activate</strong> <span class="pf2-icon">A</span> Interact</p>
 ------ Description (fr) ------
-<p>Boire cette potion épaisse et fortifiante confère une résistance de 10 contre les dégâts électriques pendant 1 heure.</p>
-<p><strong>Activate</strong> <span style="font-family : 'Pathfinder2eActions' ; font-size : 1.8em ; display : inline;">A</span> Interact</p>
+<p><span>En buvant cette épaisse potion fortifiante, vous gagnez une résistance 10 contre dégâts d'électricité pendant 1 heure.</p>
+<p><strong>Activation</strong> <span class="pf2-icon">A</span> Interagir</p>
