--- a/data/equipment/consumable-10-Wjkw0lEUOhypYvzo.htm
+++ b/data/equipment/consumable-10-Wjkw0lEUOhypYvzo.htm
@@ -1,7 +1,6 @@
 Name: Shadow Essence
-Nom: 
-État: changé
-État d'origine: auto-trad
+Nom: Distilation d'ombre
+État: libre
 
 ------ Description (en) ------
 <p>Distilled from the Plane of Shadow, this oily substance imposes tenebrous effects. The enfeebled condition from shadow essence lasts for 24 hours.</p>
@@ -13,11 +12,11 @@ Nom:
 <p><strong>Stage 2</strong> [[/r 3d6#negative]] negative damage, [[/r 2d6#poison]], and @Compendium[pf2e.conditionitems.MIRkyAjyBeXivMa7]{Enfeebled} 1 (1 round)</p>
 <p><strong>Stage 3</strong> [[/r 3d6#negative]] negative damage, [[/r 2d6#poison]], and enfeebled 2 (1 round)</p>
 ------ Description (fr) ------
-<p>Distillée du plan de l'ombre, cette substance huileuse impose des effets ténébreux. L'état d'affaiblissement dû à l'essence d'ombre dure 24 heures.</p>
+<p>Distillée du plan de l'ombre, cette substance huileuse impose des effets ténébreux. L'état d'affaiblissement dû à la distillation d'ombre dure 24 heures.</p>
 <hr />
-<p><strong>Activate</strong> <span style="font-family : 'Pathfinder2eActions' ; font-size : 1.8em ; display : inline;">D</span> Interact (Injury)</p>
-<p><strong>Jet de sauvegarde</strong> DC 29 Force</p>
+<p><strong>Activation</strong> <span class="pf2-icon">D</span> Interagir (Blessure)</p>
+<p><strong>Jet de sauvegarde</strong> DD 29 Vigueur</p>
 <p><strong>Durée maximale</strong> 6 rounds</p>
-<p><strong>Stade 1</strong> [[/r 3d6#négatif]] dégâts négatifs et [[/r 2d6#poison]] dégâts de poison (1 round)</p>
-<p><strong>Stade 2</strong> [[/r 3d6#negative]] dégâts négatifs, [[/r 2d6#poison]], et @Compendium[pf2e.conditionitems.MIRkyAjyBeXivMa7]{Enfeebled} 1 (1 round)</p>
-<p><strong>Stade 3</strong> [[/r 3d6#negative]] dégâts négatifs, [[/r 2d6#poison]], et affaiblissement 2 (1 round)</p>
+<p><strong>Stade 1</strong> [[/r 3d6#négative]] points de dégâts négatifs et [[/r 2d6#poison]] points de dégâts de poison (1 round)</p>
+<p><strong>Stade 2</strong> [[/r 3d6#negative]] points de dégâts négatifs, [[/r 2d6#poison]] points de dégâts de poison, et @Compendium[pf2e.conditionitems.MIRkyAjyBeXivMa7]{Affaibli} 1 (1 round)</p>
+<p><strong>Stade 3</strong> [[/r 3d6#negative]] points de dégâts négatifs, [[/r 2d6#poison]] points de dégâts de poison, et Affaibli 2 (1 round)</p>
