--- a/data/equipment/consumable-10-yG6Za8FaG3hpXUGh.htm
+++ b/data/equipment/consumable-10-yG6Za8FaG3hpXUGh.htm
@@ -1,11 +1,10 @@
 Name: Potion of Acid Resistance (Moderate)
-Nom: 
-État: changé
-État d'origine: auto-trad
+Nom: Potion de résistance à l'acide (modéré)
+État: officielle
 
 ------ Description (en) ------
 <p>Drinking this thick, fortifying potion grants resistance 10 against acid damage for 1 hour.</p>
 <p><strong>Activate</strong> <span class="pf2-icon">A</span> Interact</p>
 ------ Description (fr) ------
-<p>Boire cette potion épaisse et fortifiante confère une résistance de 10 aux dégâts d'acide pendant 1 heure.</p>
-<p><strong>Activate</strong> <span style="font-family : 'Pathfinder2eActions' ; font-size : 1.8em ; display : inline;">A</span> Interact</p>
+<p><span>En buvant cette épaisse potion fortifiante, vous gagnez une résistance de 10 contre des dégâts d'acide pendant 1 heure.</span></p>
+<p><strong>Activation</strong> <span class="pf2-icon">A</span> Interagir</p>
