--- a/data/equipment/consumable-06-u1gZaIZHnEfZDc1o.htm
+++ b/data/equipment/consumable-06-u1gZaIZHnEfZDc1o.htm
@@ -1,11 +1,10 @@
 Name: Potion of Acid Resistance (Lesser)
 Nom: Potion de résistance à l'acide (inférieur)
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>Drinking this thick, fortifying potion grants resistance 5 against acid damage for 1 hour.</p>
 <p><strong>Activate</strong> <span class="pf2-icon">A</span> Interact</p>
 ------ Description (fr) ------
-<p><span>En buvant cette épaisse potion fortifiante, vous gagnez une résistance de 5 contre les dégâts d'acide pendant 1 heure.</p>
-<p><strong>Activation</strong> <span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;">A</span> Intera</p>
+<<p><span>En buvant cette épaisse potion fortifiante, vous gagnez une résistance de 5 contre des dégâts d'acide pendant 1 heure.</span></p>
+<p><strong>Activation</strong> <span class="pf2-icon">A</span> Interagir</p>
